--- a/lessons/lesson-1/index.html
+++ b/lessons/lesson-1/index.html
@@ -29,7 +29,7 @@
     <p>Mô tả: Chèn ảnh sau vào web, khi click vào sẽ mở trong tab mới và link sang trang https://28tech.com.vn/</p>
     
     <a href="https://28tech.com.vn/" target="_blank">
-        <img src="https://28tech.com.vn/assets/img/logo.png" alt="28Tech">
+        <img src="https://cdn-main.28tech.com.vn/media/anh-khoa-hoc/front-end.png" width="500px" alt="28Tech">
     </a>
 </body>
 
